# nonstandard-domain-solver

./: .gitignore  CMakeLists.txt
include/: chebyshev_method.hpp  grid.hpp  matrix.hpp  method.hpp  solver.hpp  solver1.hpp  task.hpp
sample/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  chebyshev_method.cpp  grid.cpp  matrix.cpp  solver.cpp  solver1.cpp  task.cpp
